# ai-support-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.ingest  README.md  docker-compose.yml  greenleaf.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: config.py  logging_setup.py  protocols.py  schemas.py
src/chat/: __init__.py  app.py  claude_client.py  prompt.py  retrieval.py  session.py
src/dashboard/: __init__.py  app.py  auth.py  db.py  logger.py  metrics.py
src/handoff/: __init__.py  crisp_handler.py  email_handler.py  handler.py
src/index/: __init__.py  pinecone_client.py
src/ingest/: __init__.py  chunker.py  crawler.py  diff.py  embedder.py  extractor.py  pipeline.py
src/validator/: __init__.py  url_check.py
src/widget/: embed.html  widget.js
tests/: conftest.py  fakes.py  test_chat.py  test_chunker.py  test_dashboard.py  test_dashboard_api.py  test_diff.py  test_extractor.py  test_handoff.py  test_pipeline_integration.py  test_rate_limit.py  test_validator.py
tests/fixtures/: qa_pairs.yaml
