[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenleaf-chatbot"
version = "0.1.0"
description = "Grounded RAG customer service chatbot for GreenLeaf Garden Supplies"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit external services (Pinecone, Voyage, Claude)",
]

[tool.coverage.run]
source = ["src"]
# These modules wrap real external APIs (Claude, Pinecone, Voyage AI, Playwright).
# They are exercised only in integration tests; omitting them keeps the unit-test
# coverage gate meaningful rather than artificially deflated.
omit = [
    "src/chat/claude_client.py",
    "src/chat/prompt.py",
    "src/index/pinecone_client.py",
    "src/ingest/crawler.py",
    "src/ingest/embedder.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
pythonVersion = "3.13"
pythonPath = "C:/Users/user/AppData/Local/Programs/Python/Python313/python.exe"
